# infinity

./: .gitignore  .gitmodules  .tool-versions  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  script_fastembed.py  subsribe.py  tes.py  versions.json
.github/: dependabot.yml  pull_request_template.md
libs/client_infinity/infinity_client/: README.md  pyproject.toml
libs/client_infinity/infinity_client/infinity_client/: __init__.py  errors.py  vision_client.py
libs/client_infinity/infinity_client/infinity_client/api/default/: classify.py  embeddings.py  embeddings_audio.py  embeddings_image.py  health.py  metrics_metrics_get.py  models.py  redirect_get.py  rerank.py
libs/client_infinity/infinity_client/infinity_client/models/: __init__.py  audio_embedding_input.py  classify_input.py  classify_object.py  classify_result.py  classify_result_object.py  embedding_encoding_format.py  embedding_object.py  embedding_object_object.py  http_validation_error.py  image_embedding_input.py  model_info.py  model_info_object.py  model_info_owned_by.py  open_ai_embedding_input.py  open_ai_embedding_input_audio.py  open_ai_embedding_input_audio_infinity_extra_modality.py  open_ai_embedding_input_audio_modality.py  open_ai_embedding_input_image.py  open_ai_embedding_input_image_infinity_extra_modality.py  open_ai_embedding_input_image_modality.py  open_ai_embedding_input_text.py  open_ai_embedding_input_text_infinity_extra_modality.py  open_ai_embedding_input_text_modality.py  open_ai_embedding_result.py  open_ai_embedding_result_object.py  open_ai_model_info.py  re_rank_object.py  re_rank_result.py  re_rank_result_object.py  rerank_input.py  response_health.py  stats.py  usage.py  validation_error.py
libs/easyinference/: Makefile  pyproject.toml
libs/easyinference/easyinference/: __init__.py  infer.py
libs/embed_package/: Makefile  README.md  pyproject.toml
libs/embed_package/embed/: __init__.py  _infer.py  infer.py
libs/infinity_emb/: .dockerignore  Docker.template.yaml  Dockerfile  Dockerfile.amd_auto  Dockerfile.cpu_auto  Dockerfile.flash  Dockerfile.intel_auto  Dockerfile.jinja2  Dockerfile.nvidia_auto  Dockerfile.trt_onnx_auto  Makefile  README.md  docker.template.yaml  environment_config.sh  infinity_server.spec  poetry.toml  pyproject.toml  requirements_install_from_poetry.sh  test_clip.py
libs/infinity_emb/infinity_emb/: __init__.py  _optional_imports.py  args.py  cli.py  engine.py  env.py  infinity_server.py  log_handler.py  primitives.py  strucutred_logging.py  sync_engine.py  telemetry.py
libs/infinity_emb/infinity_emb/fastapi_schemas/: __init__.py  convert.py  data_uri.py  docs.py  errors.py  pydantic_v2.py  pymodels.py
libs/infinity_emb/infinity_emb/inference/: __init__.py  batch_handler.py  caching_layer.py  loading_strategy.py  model_worker.py  models.py  primitives.py  queue.py  select_model.py  threading_asyncio.py
libs/infinity_emb/infinity_emb/transformer/: __init__.py  abstract.py  acceleration.py  dummytransformer.py  fastembed.py  sentence_transformer.py  utils.py  utils_optimum.py
libs/infinity_emb/infinity_emb/transformer/audio/: torch.py  utils.py
libs/infinity_emb/infinity_emb/transformer/classifier/: optimum.py  torch.py
libs/infinity_emb/infinity_emb/transformer/crossencoder/: __init__.py  optimum.py  torch.py
libs/infinity_emb/infinity_emb/transformer/embedder/: ct2.py  dummytransformer.py  fastembed.py  neuron.py  optimum.py  sentence_transformer.py
libs/infinity_emb/infinity_emb/transformer/quantization/: interface.py  quant.py
libs/infinity_emb/infinity_emb/transformer/vision/: __init__.py  torch_vision.py  utils.py
libs/infinity_emb/tests/: conftest.py  install_test.sh  script_live.py
libs/infinity_emb/tests/data/benchmark/: benchmark_embed.json  benchmark_embed_image.json
libs/infinity_emb/tests/end_to_end/: conftest.py  test_api_with_dummymodel.py  test_authentication.py  test_ct2_sentence.py  test_fastembed.py  test_openapi_client_compat.py  test_optimum_embedding.py  test_sentence_transformers.py  test_sentence_transformers_colbert.py  test_torch_audio.py  test_torch_classify.py  test_torch_reranker.py  test_torch_vision.py
libs/infinity_emb/tests/unit_test/: test_args.py  test_cli.py  test_clip.py  test_engine.py  test_infinity_server.py  test_log_handler.py  test_sync_engine.py
libs/infinity_emb/tests/unit_test/fastapi_schemas/: test_data_uri.py  test_errors.py  test_response.py
libs/infinity_emb/tests/unit_test/inference/: test_batch_handler.py  test_caching_layer.py  test_models.py  test_select_model.py
libs/infinity_emb/tests/unit_test/transformer/: test_utils.py
libs/infinity_emb/tests/unit_test/transformer/audio/: test_audio.py
libs/infinity_emb/tests/unit_test/transformer/classifier/: test_optimum_classifier.py  test_torch_classifer.py
libs/infinity_emb/tests/unit_test/transformer/crossencoder/: test_optimum_crossencoder.py  test_torch_crossencoder.py
libs/infinity_emb/tests/unit_test/transformer/embedder/: test_optimum.py  test_torch.py
libs/nestedtransformer_infinity/: Makefile  README.md  pyproject.toml
libs/nestedtransformer_infinity/infinity_nestedtransformer/: __init__.py  transformation.py
libs/nestedtransformer_infinity/infinity_nestedtransformer/models/: __init__.py  attention.py  base.py  decoder_models.py  encoder_models.py  repro.py
libs/nestedtransformer_infinity/infinity_nestedtransformer/utils/: __init__.py  doc.py  file_utils.py  import_utils.py  input_generators.py  logging.py  normalized_config.py  runs.py  save_utils.py  testing_utils.py
libs/nestedtransformer_infinity/infinity_nestedtransformer/utils/preprocessing/: __init__.py  base.py  image_classification.py  question_answering.py  task_processors_manager.py  text_classification.py  token_classification.py
libs/nestedtransformer_infinity/tests/: test_audio.py  test_common.py  test_decoder.py  test_encoder.py  test_encoder_decoder.py  test_gpu.py  test_vision.py  testing_utils.py
libs/simpleinference/: Makefile  pyproject.toml
libs/simpleinference/simpleinference/: __init__.py  infer.py
(+670 files in other folders)
