[tool.poetry]
name = "infinity_nestedtransformer"
version = "0.0.1"
description = "Nested Transformer inference for infinity"
authors = ["michaelfeil <me@michaelfeil.eu>"]
readme = "README.md"
homepage = "https://github.com/michaelfeil/infinity"
repository = "https://github.com/michaelfeil/infinity"
keywords = ["vector", "embedding", "neural", "search", "sentence-transformers"]
license = "Unclear"

[tool.poetry.dependencies]
python = ">=3.9,<4"
torch = ">=2.5.0"
transformers = ">4.32.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.6.3"}
mypy = "^1.12.0"
parameterized = "^0.7.5"
pillow = "^11.0.0"
optimum = "*"
torchvision = "*"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.2.0"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
types-pytz = "^2023.3.0.0"
black = "^23.1.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
